# canopy-lang

./: .sops.yaml  MODELO_OPEN_SOURCE_MONETIZACION.md  MONETIZATION_STRATEGY.md  MVP_TDD_HEXAGONAL.md  PINESCRIPT_RESEARCH_REPORT.md  PLAN_ACCION_INMEDIATO.md  README.md  RESUMEN_EJECUTIVO_CANOPY.md  TRADING_LANGUAGE_RESEARCH.md  decrypt.sh  encrypt.sh
canopy/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DATA_PROVIDERS_SUMMARY.md  Dockerfile  INTEGRATION_DEVOPS_SUMMARY.md  MVP_COMPLETE_SUMMARY.md  Makefile  OPTIMIZATION_REPORT.md  PORTFOLIO_ENGINE_SUMMARY.md  README.md  WEB_BACKEND_API_COMPLETE.md  docker-compose.yml  example_usage.py  pyproject.toml
canopy/.github/workflows/: deploy.yml  docker-build.yml  tests.yml
canopy/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  LANGUAGE_REFERENCE.md
canopy/examples/: ma_crossover.canopy  optimize_ma.py  portfolio_longshort_example.py  portfolio_pairs_trading_example.py  portfolio_rotation_example.py  quickstart_byod.py
canopy/examples/optimization/: optimize_ma_crossover.py
canopy/examples/python/: custom_indicator.py  ml_strategy.py
canopy/examples/strategies/advanced/: atr_breakout.canopy  bollinger_squeeze.canopy  macd_divergence.canopy  multi_timeframe.canopy
canopy/examples/strategies/basic/: ema_crossover.canopy  rsi_meanreversion.canopy  volume_breakout.canopy
canopy/examples/strategies/portfolio/: pairs_trading.canopy  sector_rotation.canopy
canopy/scripts/: build-docker.sh  run-dev.sh  setup.sh  test-all.sh
canopy/src/canopy/: __init__.py
canopy/src/canopy/api/: QUICK_REFERENCE.md  README.md  __init__.py  config.py  dependencies.py  main.py
canopy/src/canopy/application/: __init__.py  fetch_data.py  metrics_calculator.py  optimize_strategy.py  run_backtest.py  run_portfolio_backtest.py
canopy/src/canopy/domain/: __init__.py  backtest.py  indicator.py  metrics.py  monte_carlo.py  optimization.py  optimizer.py  portfolio.py  portfolio_metrics.py  portfolio_strategy.py  robustness.py  signal.py  strategy.py  timeseries.py  walk_forward.py
canopy/src/canopy/parser/: __init__.py  parser.py
canopy/src/canopy/ports/: __init__.py  backtest_engine.py  data_provider.py  optimizer.py  portfolio_backtest_engine.py
canopy/src/canopy/utils/: __init__.py  logger.py  metrics.py  monitoring.py
canopy/test_strategy/: strategy.canopy
canopy/tests/: __init__.py
canopy/tests/fixtures/: INVALID.csv  SPY.csv  sample_data.csv
canopy/tests/integration/: test_api_workflow.py  test_cli.py  test_csv_provider.py  test_full_workflow.py  test_simple_engine.py  test_yahoo_provider.py
canopy/tests/unit/test_adapters/: __init__.py
canopy/tests/unit/test_application/: test_optimize_strategy.py  test_run_backtest.py  test_run_portfolio_backtest.py
canopy/tests/unit/test_data/: test_provider_factory.py
canopy/web/: AGENT4_SUMMARY.md  DEMO_GUIDE.md  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
canopy/web/src/: App.tsx  index.css
canopy/web/src/api/: canopy-api.ts
(+75 files in other folders)
