[tool.poetry]
name = "canopy-lang"
version = "0.1.0"
description = "A domain-specific language for trading strategy development"
authors = ["Canopy Team"]
readme = "README.md"
packages = [{include = "canopy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
pandas = "^2.0"
numpy = "^1.24"
yfinance = "^0.2.28"
typer = "^0.9.0"
rich = "^13.7.0"
scikit-optimize = "^0.9"
deap = "^1.4"
scipy = "^1.11"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-multipart = "^0.0.6"
httpx = "^0.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"

[tool.poetry.scripts]
canopy = "canopy.adapters.ui.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
