[tool.poetry]
name = "canopy-lang"
version = "0.0.1"
description = "A domain-specific language for trading strategy development and backtesting"
authors = ["Luis Arancibia <arancibialuisalejandro@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/larancibia/canopy-lang"
repository = "https://github.com/larancibia/canopy-lang"
documentation = "https://github.com/larancibia/canopy-lang#readme"
keywords = ["trading", "dsl", "backtesting", "quant", "finance", "algorithmic-trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{include = "canopy", from = "src"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/larancibia/canopy-lang/issues"
"Changelog" = "https://github.com/larancibia/canopy-lang/blob/master/canopy/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
pydantic-settings = "^2.0"
pandas = "^2.0"
numpy = "^1.24"
yfinance = "^0.2.28"
typer = "^0.9.0"
rich = "^13.7.0"
scikit-optimize = "^0.9"
deap = "^1.4"
scipy = "^1.11"

# Optional web extras (install with: pip install canopy-lang[web])
fastapi = {version = "^0.104", optional = true}
uvicorn = {extras = ["standard"], version = "^0.38.0", optional = true}
python-multipart = {version = "^0.0.6", optional = true}
httpx = {version = "^0.25", optional = true}

[tool.poetry.extras]
web = ["fastapi", "uvicorn", "python-multipart", "httpx"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"

[tool.poetry.scripts]
canopy = "canopy.adapters.ui.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
